--- a/package.json
+++ b/package.json
@@ -22,15 +22,14 @@
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
-    "vue-property-decorator": "^8.4.2",
-    "vuelidate": "^0.7.5"
+    "vue-property-decorator": "^8.4.2"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.8.7",
     "@types/jest": "^25.2.3",
     "@types/vuelidate": "^0.7.13",
-    "@typescript-eslint/eslint-plugin": "^3.0.0",
-    "@typescript-eslint/parser": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "^3.0.1",
+    "@typescript-eslint/parser": "^3.0.1",
     "@vue/cli-plugin-babel": "~4.3.1",
     "@vue/cli-plugin-e2e-cypress": "~4.3.1",
     "@vue/cli-plugin-eslint": "~4.3.1",
