--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@vue/eslint-config-typescript": "^5.0.2",
     "@vue/test-utils": "1.0.3",
     "bootstrap": "^4.5.0",
+    "cypress": "^4.6.0",
     "eslint": "^7.1.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
