chore(app): override cypress version

--- a/package.json
+++ b/package.json
@@ -92,5 +92,8 @@
   ],
   "jest": {
     "preset": "@vue/cli-plugin-unit-jest/presets/typescript-and-babel"
+  },
+  "resolutions": {
+    "cypress": "^4.6.0"
   }
 }
