--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "fast-form",
   "version": "1.0.0",
+  "description": "Utilant Fast Form Designer",
+  "author": "Nate Stuyvesant",
+  "license": "MIT",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
