--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/vue-fontawesome": "^0.1.9",
+    "@popperjs/core": "2.4.1",
     "bootstrap-vue": "^2.15.0",
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
@@ -50,7 +51,6 @@
     "eslint-plugin-vue": "^6.2.2",
     "mutationobserver-shim": "^0.3.5",
     "node-sass": "^4.14.1",
-    "popper.js": "^1.16.1",
     "portal-vue": "^2.1.7",
     "prettier": "^2.0.5",
     "sass": "^1.26.8",
