--- a/package.json
+++ b/package.json
@@ -8,19 +8,19 @@
   "scripts": {
     "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit",
+    "test:unit": "vue-cli-service test:unit --no-cache",
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint"
   },
   "engines": {
     "node": "~14.4.0",
-    "npm": "~6.14.5"
+    "yarn": "~1.22.4"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/vue-fontawesome": "^0.1.9",
-    "@popperjs/core": "2.4.1",
+    "@popperjs/core": "2.4.2",
     "bootstrap-vue": "^2.15.0",
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
@@ -30,7 +30,7 @@
   },
   "devDependencies": {
     "@babel/polyfill": "^7.10.1",
-    "@types/jest": "^25.2.3",
+    "@types/jest": "^26.0.0",
     "@types/vuelidate": "^0.7.13",
     "@typescript-eslint/eslint-plugin": "^3.2.0",
     "@typescript-eslint/parser": "^3.2.0",
@@ -49,7 +49,7 @@
     "eslint": "^7.2.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
-    "mutationobserver-shim": "^0.3.5",
+    "mutationobserver-shim": "^0.3.7",
     "node-sass": "^4.14.1",
     "portal-vue": "^2.1.7",
     "prettier": "^2.0.5",
