chore(app): add license

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Utilant Fast Form Designer",
   "author": "Nate Stuyvesant",
-  "license": "MIT",
+  "license": "https://github.com/nstuyvesant/fast-form/LICENSE",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --open",
